--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+<hr>
+<p class="animated fadeIn">
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. At atque consequatur culpa doloribus laborum reiciendis veniam! Necessitatibus qui, quia! Adipisci eaque eos numquam quam sint. Iusto magnam ratione temporibus ut.
+</p>
