--- a/src/app/components/find/find.component.html
+++ b/src/app/components/find/find.component.html
@@ -10,20 +10,7 @@
 </div>
 <div class="card-columns">
 
-  <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i= index;">
-    <img [src]="heroe.img" class="card-img-top img-fluid" [alt]="heroe.nombre">
-    <div class="card-body">
-      <h5 class="card-title">{{heroe.nombre}}</h5>
-      <p class="card-text">{{heroe.bio}}</p>
-      <p class="card-text"><small class="text-muted">{{heroe.aparicion}}</small></p>
-      <button (click)="verHeroe(heroe.index)" type="button"   class="btn btn-outline-primary btn-block" >
-        Ver más...
-      </button>
-      <!-- <a [routerLink]="['/heroe',i]" class="btn btn-outline-primary">
-         Ver más...
-       </a>-->
-    </div>
-  </div>
+  <app-heroe-tarjeta [heroe]="heroe" [index]="heroe.index" *ngFor="let heroe of heroes; let i= index;"></app-heroe-tarjeta>
 
 
 </div>
